--- a/src/components/UserInputForm/UserInputForm.css
+++ b/src/components/UserInputForm/UserInputForm.css
@@ -42,14 +42,15 @@
   font-size: 1em;
   border: 3px solid black;
   border-radius: 0 5px 5px 0;
-  background-color: rgb(67, 67, 188);
+  background-color: rgb(84, 223, 128);
 }
 
 .user-input-btn:focus {
   outline: none;
-  background-color: rgba(67, 67, 188, 0.8);
+  opacity: 0.8;
 }
 
 .user-input-btn:hover {
-  background-color: rgba(67, 67, 188, 0.8);
+  opacity: 0.8;
+  cursor: pointer;
 }
